@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.10.23-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-10-23 11:06:47, took 00:15:11, with 50 workers, on 4054 cases, 0 failed, 0 traces, 6 retries<br/>
+tested: 2025-10-23 12:01:37, took 00:17:10, with 50 workers, on 4056 cases, 0 failed, 0 traces, 7 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -422,6 +422,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-redun03.tst">conn-redun03.tst</a></td><td>success</td><td>ospf with process redundancy</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-redun04.tst">conn-redun04.tst</a></td><td>success</td><td>isis with process redundancy</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-redun05.tst">conn-redun05.tst</a></td><td>success</td><td>bgp with process redundancy</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-rlogin.tst">conn-rlogin.tst</a></td><td>success</td><td>ppp over rlogin</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-sep.tst">conn-sep.tst</a></td><td>success</td><td>sep</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-slaac.tst">conn-slaac.tst</a></td><td>success</td><td>slaac</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-sreth01.tst">conn-sreth01.tst</a></td><td>success</td><td>sreth over ipv4</td></tr>
@@ -441,7 +442,8 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-sstp.tst">conn-sstp.tst</a></td><td>success</td><td>ppp over sstp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-stp.tst">conn-stp.tst</a></td><td>success</td><td>spantree over ethernet</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-stun.tst">conn-stun.tst</a></td><td>success</td><td>ppp over stun</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-tcp.tst">conn-tcp.tst</a></td><td>success</td><td>ppp over tcp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-tcp01.tst">conn-tcp01.tst</a></td><td>success</td><td>ppp over tcp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-tcp02.tst">conn-tcp02.tst</a></td><td>success</td><td>ppp over tcp without sack</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-tdmou01.tst">conn-tdmou01.tst</a></td><td>success</td><td>tdmoudp with middle channels</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-tdmou02.tst">conn-tdmou02.tst</a></td><td>success</td><td>ppp with tdmoudp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-tdmou03.tst">conn-tdmou03.tst</a></td><td>success</td><td>hdlc with tdmoudp</td></tr>
